modal pronto, falta add gráficos

--- a/2.1-chart.html
+++ b/2.1-chart.html
@@ -59,9 +59,10 @@
 
 
   <!-- Select dos Gráficos -->
+  <!-- G1 - Formulário -->
 
-  <label for="forms-adm" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Formulários dos Colaboradores</label>
-  <select id="forms-adm" onchange="showGraph()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+  <label for="forms-adm" class="block mb-2 text-sm font-medium text-gray-900">Formulários dos Colaboradores</label> <!--Título G1 -->
+  <select id="forms-adm" onchange="showGraph()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" data-toggle="modal"> <!--Estilo do Select G1-->
     <option selected>Escolha um Formulário</option>
     <option value="FT">Formulário de Satisfação no Trabalho</option>
     <option value="FP">Formulário de Satisfação Pessoal</option>
@@ -69,8 +70,10 @@
     <option value="FA">Formulário de Autocuidado</option>
   </select>
 
-  <label for="select-adm" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Gráficos e outras informações</label>
-  <select id="select-adm" onchange="showGraph()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" data-toggle="modal">
+   <!-- G2 - Outros gráficos -->
+
+  <label for="select-adm" class="block mb-2 text-sm font-medium text-gray-900 ">Gráficos e outras informações</label> <!--Título G2 -->
+  <select id="select-adm" onchange="showGraph()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" data-toggle="modal">  <!--Estilo do Select G2-->
     <option selected>Escolha um Gráfico</option>
     <option value="SG">Satisfação Geral dos Colaboradores</option>
     <option value="DF">Distribuição de Respostas por Formulário</option>
@@ -79,15 +82,18 @@
     <option value="TT">Tendências Temporais</option>
     <option value="VPP">Equilíbrio de Vida Pessoal/Profissional</option>
     <option value="CR">Correlações</option>
-    <option value="FD">Feedback</option> <!-- Qualitativo. Será distribuido visto aleatóriamente, sem identificação -->
+    <option value="FB">Feedback</option> <!-- Qualitativo. Será distribuido visto aleatóriamente, sem identificação -->
   </select>
 
-  <!-- Modal -->
-  <div class="modal-overlay" onclick="closeModal()"></div>
-  <div class="modal" id="modal">
 
+  <!-- Modal -->
+
+  <div class="modal-overlay" onclick="closeModal()"></div> <!-- [Adicionar um "clique fora da tela para sair"]-->
+  <div class="modal" id="modal">
+    <!-- Conteúdo do modal (gráficos) -->
+    <h1>oi boboca</h1>
+    
   </div>
-  
 
 </body>
 </html>
