Ajustes finais na tela de recursos

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -25,26 +25,28 @@
 <body>
   <header class="my-header">
     <div class="logo">
-      <img src="../assets/images/logo-sem-escrita.png" alt="Logo" />
+      <a href="homepage.html">
+        <img src="../assets/images/logo-sem-escrita.png" alt="Logo" />
+      </a>
     </div>
     <div id="open-menu-lateral" class="menu-list">|||</div>
     <ul class="header-items flex justify-around">
-      <li>Minha Empresa</li>
-      <li>Avaliações</li>
-      <li>Consultas</li>
+      <li><a href="homepage.html">Recursos</a></li>
+      <li><a href="avaliacoes.html">Avaliações</a></li>
+      <li><a href="consultas.html">Consultas</a></li>
     </ul>
     <div class="user-icon">
       <img src="../assets/images/user-icon.png" alt="Usuario">
     </div>
     <div id="menu-lateral">
       <ul class="menu-lateral-options">
-        <li><a href="minha-empresa.html">Minha Empresa</a></li>
+        <li><a href="homepage.html">Recursos</a></li>
         <li><a href="avaliacoes.html">Avaliações</a></li>
         <li><a href="consultas.html">Consultas</a></li>
       </ul>
-      <div id="close-menu-lateral">
+      <div id="close-menu-lateral" class="grid flex place-content-end">
         <p id="btn-close-menu-lateral">
-          <<< </p>
+          << </p>
       </div>
     </div>
   </header>
