--- a/src/login/index.html
+++ b/src/login/index.html
@@ -41,7 +41,7 @@
   </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="../index.js"></script>
+  <script src="login.js"></script>
 </body>
 
 </html>
