--- a/src/homepage.html
+++ b/src/homepage.html
@@ -31,18 +31,18 @@
     </div>
     <div id="open-menu-lateral" class="menu-list">|||</div>
     <ul class="header-items flex justify-around">
-      <li><a href="homepage.html">Recursos</a></li>
+      <li><a href="minha-empresa.html">Minha Empresa</a></li>
       <li><a href="avaliacoes.html">Avaliações</a></li>
-      <li><a href="consultas.html">Consultas</a></li>
+      <li><a href="metas.html">Metas</a></li>
     </ul>
     <div class="user-icon">
       <img src="../assets/images/user-icon.png" alt="Usuario">
     </div>
     <div id="menu-lateral">
       <ul class="menu-lateral-options">
-        <li><a href="homepage.html">Recursos</a></li>
+        <li><a href="minha-empresa.html">Minha Empresa</a></li>
         <li><a href="avaliacoes.html">Avaliações</a></li>
-        <li><a href="consultas.html">Consultas</a></li>
+        <li><a href="metas.html">Metas</a></li>
       </ul>
       <div id="close-menu-lateral" class="grid flex place-content-end">
         <p id="btn-close-menu-lateral">
