Ajustes de links do javascript, e junção dos dois arquivos

--- a/src/eventos.html
+++ b/src/eventos.html
@@ -51,6 +51,8 @@
       </div>
     </div>
   </header>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
