--- a/src/homepage.html
+++ b/src/homepage.html
@@ -105,7 +105,7 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="homepage.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
