--- a/src/minha-empresa.html
+++ b/src/minha-empresa.html
@@ -96,9 +96,8 @@
         </button>
       </div>
     </div>
-
-
-
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
