correção de bugs modal do select (script/html). Página "pronta"

--- a/2.2-goals.html
+++ b/2.2-goals.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <script src="index.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> <!--- Conteúdo da Google Charts -->
     <script type="text/javascript">
         google.charts.load('current', { 'packages': ['bar'] });
         google.charts.setOnLoadCallback(drawChart);</script>
@@ -82,7 +82,7 @@
     </div>
 
 
-     <!-- Botões Anual -->
+     <!-- Gráfico Anual -->
 
     <div class="bg-[#6FAFC3] py-3 px-10 ">
         <div class="text-2xl font-bold text-black"> Preenchimentos por Ano</div>
