Criacação da página de Usuario (dados cadastrais), adicionar feedback

--- a/usuario/usuario.html
+++ b/usuario/usuario.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../src/reset.css">
+    <link rel="stylesheet" href="usuario.css">
     <link rel="stylesheet" href="../src/header.css">
+    <link rel="stylesheet" href="../src/reset.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -51,8 +52,25 @@
             </div>
         </div>
     </header>
-
-
+    <div class="user-page flex">
+        <div class="user-info">
+            <img src="../assets/images/user-picture.jpg" alt="user-pic" />
+            <h1>Paola Kloch</h1>
+        </div>
+        <div class="user-data">
+            <div class="info-grid1">
+                <h2>E-mail: paola.lopes@mouts.info</h2>
+                <h2> Contato: (47) 99286-1109</h2>
+                <h2>Endereço: Indaial, Avenida Brasil</h2>
+            </div>
+            <div class="info-grid2">
+                <h2>Cargo: SDR</h2>
+                <h2>Minha empresa: Mouts TI</h2>
+                <h2>Modelo de contratação: Cooperado</h2>
+            </div>
+        </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="index.js"></script>
 </body>
