Organização de pastas

--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="homepage.css">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="../homepage/homepage.css">
+  <link rel="stylesheet" href="../utils/reset.css">
+  <link rel="stylesheet" href="../utils/header.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -25,24 +25,24 @@
 <body>
   <header class="my-header">
     <div class="logo">
-      <a href="homepage.html">
-        <img src="../assets/images/logo-sem-escrita.png" alt="Logo" />
+      <a href="../homepage/homepage.html">
+        <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
       </a>
     </div>
     <div id="open-menu-lateral" class="menu-list">|||</div>
     <ul class="header-items flex justify-around">
-      <li><a href="minha-empresa.html">Minha Empresa</a></li>
-      <li><a href="avaliacoes.html">Avaliações</a></li>
-      <li><a href="metas.html">Metas</a></li>
+      <li><a href="../estatisticas/estatisticas.html">Estatísticas</a></li>
+      <li><a href="../colaboradores/colaboradores.html">Colaboradores</a></li>
+      <li><a href="../metas/metas.html">Metas</a></li>
     </ul>
     <div class="user-icon">
-      <img src="../assets/images/user-icon.png" alt="Usuario">
+      <img src="../../assets/images/user-icon.png" alt="Usuario">
     </div>
     <div id="menu-lateral">
       <ul class="menu-lateral-options">
-        <li><a href="minha-empresa.html">Minha Empresa</a></li>
-        <li><a href="avaliacoes.html">Avaliações</a></li>
-        <li><a href="metas.html">Metas</a></li>
+        <li><a href="../estatisticas/estatisticas.html">Estatísticas</a></li>
+        <li><a href="../colaboradores/colaboradores.html">Colaboradores</a></li>
+        <li><a href="../metas/metas.html">Metas</a></li>
       </ul>
       <div id="close-menu-lateral" class="grid flex place-content-end">
         <p id="btn-close-menu-lateral">
@@ -53,7 +53,7 @@
 
   <div class="fundo-banner">
     <div class="banner">
-      <img src="../assets/images/aspas.png">
+      <img src="../../assets/images/aspas.png">
       <h2>Só a experiência própria é capaz de tornar sábio o ser humano.</h2>
       <h4 class="my-8">Sigmund Freud</h4>
     </div>
@@ -63,7 +63,7 @@
       Recursos</h1>
     <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 gap-4">
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/2.png" alt="" class="imagem-card image12 h-60">
+        <img src="../../assets/images/2.png" alt="" class="imagem-card image12 h-60">
         <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
           Conscientização
         </h1>
@@ -73,7 +73,7 @@
         <input type="button" value="Treinamentos" class="button-card bg-blue-800 rounded-md text-md cursor-pointer">
       </div>
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/3.png" alt="" class="imagem-card image12 h-60">
+        <img src="../../assets/images/3.png" alt="" class="imagem-card image12 h-60">
         <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center">
           Acesso a recursos
         </h1>
@@ -83,7 +83,7 @@
         <input type="button" value="Experimente aqui" class="button-card bg-blue-800 rounded-md text-md cursor-pointer">
       </div>
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/4.png" alt="" class="imagem-card image12 h-60">
+        <img src="../../assets/images/4.png" alt="" class="imagem-card image12 h-60">
         <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
           Avaliações Regulares
         </h1>
@@ -93,7 +93,7 @@
         <input type="button" value="Avalie também!" class="button-card grid content-end bg-blue-800 cursor-pointer">
       </div>
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/1.png" alt="" class="image12 h-60">
+        <img src="../../assets/images/1.png" alt="" class="image12 h-60">
         <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
           Cultura de Apoio
         </h1>
@@ -105,7 +105,7 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="index.js"></script>
+  <script src="../utils/index.js"></script>
 </body>
 
 </html>
