--- a/src/login/index.html
+++ b/src/login/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bem-Vindo(a) ao MindPlus</title>
-  <link rel="stylesheet" href="login.css">
-  <link rel="stylesheet" href="../reset.css">
+  <link rel="stylesheet" href="../login/login.css">
+  <link rel="stylesheet" href="../utils/reset.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -32,7 +32,7 @@
       <div id="keep-logged-in" class="flex place-content-center">
         <input type="checkbox" id="checkbox-keep-logged">Mantenha-me logado
       </div>
-      <a href="../homepage.html">
+      <a href="../homepage/homepage.html">
         <div class="btn-blue flex">
           <button type="button">Entrar</button>
         </div>
@@ -41,7 +41,7 @@
   </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="login.js"></script>
+  <script src="../login/login.js"></script>
 </body>
 
 </html>
