--- a/src/meus-colaboradores/meus-colaboradores.html
+++ b/src/meus-colaboradores/meus-colaboradores.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meus Colaboradores</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="../utils/style.css">
+  <link rel="stylesheet" href="../utils/header.css">
+  <link rel="stylesheet" href="../utils/reset.css">
   <script src="https://kit.fontawesome.com/f9c6abbc59.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -29,24 +29,24 @@
 <body>
   <header class="my-header">
     <div class="logo">
-      <a href="homepage.html">
-        <img src="../assets/images/logo-sem-escrita.png" alt="Logo" />
+      <a href="../homepage/homepage.css">
+        <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
       </a>
     </div>
     <div id="open-menu-lateral" class="menu-list">|||</div>
     <ul class="header-items flex justify-around">
-      <li><a href="minha-empresa.html">Minha Empresa</a></li>
-      <li><a href="colaboradores.html">Colaboradores</a></li>
-      <li><a href="metas.html">Metas</a></li>
+      <li><a href="../estatisticas/estatisticas.html">Estatísticas</a></li>
+      <li><a href="../colaboradores/colaboradores.html">Colaboradores</a></li>
+      <li><a href="../metas/metas.html">Metas</a></li>
     </ul>
     <div class="user-icon">
-      <img src="../assets/images/user-icon.png" alt="Usuario">
+      <img src="../../assets/images/user-icon.png" alt="Usuario">
     </div>
     <div id="menu-lateral">
       <ul class="menu-lateral-options">
-        <li><a href="minha-empresa.html">Minha Empresa</a></li>
-        <li><a href="colaboradores.html">Colaboradores</a></li>
-        <li><a href="metas.html">Metas</a></li>
+        <li><a href="../estatisticas/estatisticas.html">Estatísticas</a></li>
+        <li><a href="../colaboradores/colaboradores.html">Colaboradores</a></li>
+        <li><a href="../metas/metas.html">Metas</a></li>
       </ul>
       <div id="close-menu-lateral" class="grid flex place-content-end">
         <p id="btn-close-menu-lateral">
@@ -117,6 +117,6 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="index.js"></script>
+  <script src="../utils/index.js"></script>
 </body>
 </html>
