Ajustes resposividade usuario

--- a/usuario/usuario.html
+++ b/usuario/usuario.html
@@ -61,14 +61,13 @@
             <div class="info-grid1">
                 <h2>E-mail: paola.lopes@mouts.info</h2>
                 <h2> Contato: (47) 99286-1109</h2>
-                <h2>Endereço: Indaial, Avenida Brasil</h2>
+                <h2>Endereço: Avenida Brasil</h2>
             </div>
             <div class="info-grid2">
                 <h2>Cargo: SDR</h2>
                 <h2>Minha empresa: Mouts TI</h2>
-                <h2>Modelo de contratação: Cooperado</h2>
+                <h2>Modelo de contratação: PJ</h2>
             </div>
-        </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
